--- a/style.css
+++ b/style.css
@@ -377,6 +377,7 @@ QUALITY WORK
 }
 
 .quality__work--img { 
+    width: 50%;
     border-width: 1.5px;
     border-style: solid;
     border-color: rgb(226, 232, 240);
@@ -454,6 +455,10 @@ VALUES
     padding: 40px 40px;
 }
 
+.values__img {
+    width: 50%;
+}
+
 .values__features--container {
     display: flex;
 
@@ -527,7 +532,6 @@ PRICING
 .plans {
     display: flex;
     height: 100%;
-    
 }
 .plan {
     display: flex;
@@ -536,23 +540,20 @@ PRICING
     background-color: rgb(255 255 255); 
     margin: 80px 40px 0 0;
     padding: 10px 40px 0;
-    border-top: 10px  linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+    border-top: 10px;
     border-right: 1px solid #cbd5ed;
     border-left: 1px solid #cbd5ed;
     border-bottom: 1px solid #cbd5ed;
     border-radius: 10px;
     text-align: center;
-    height: 946px;
 }
 
-#personal {
-    width: 300px;
-    height: 100px;
-    position: relative;
-    background: white;
-    padding: 20px;
-    box-sizing: border-box;
-    margin: 20px;
+
+#personal,
+#enterprise {
+        position: relative;
+        background: white;
+        box-sizing: border-box;
 }
 
 #personal::before {
@@ -561,29 +562,41 @@ PRICING
         top: 0;
         left: 0;
         right: 0;
-        height: 4px;
-        background: linear-gradient(to right, 115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+        height: 10px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+ }
+
+#enterprise::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
 }
 
 #business {
-    background: 10px linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
+    background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
     border-top: none;
     color: white;
+    
 }
-
-#enterprise {
- linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
-}
-
 
 .plan__header {
     display: flex;
     flex-direction: column;
     background: #FFFFFF
     padding: 40px 0;
+    padding-bottom: 40px;
     line-height: 1.625;
     text-transform: uppercase;  
 }
+
 .name {
     font-size: 30px;
     font-weight: 900;
@@ -599,9 +612,9 @@ PRICING
 
 .duration {
     font-size: 24px;
-    font-weight: bold;
-    font-color: #7C8BA1;
-
+    font-weight: bolder;
+    color:rgb(179, 187, 197);
+    opacity: 10;
 }
 
 .plan__features {
@@ -610,25 +623,62 @@ PRICING
     border-top-width: 2px;
     border-bottom-width: 2px;
     align-items: center;
+    padding: 40px 40px;
+    width: 100%;
+
+    
 }
 
 .main__features {
+    color: #000000;
+    font-size: 28px;
+    font-weight: bold;
+}
 
+.feature {
+    color: #718096;
+    font-size: 20px;
+    font-weight: bolder;
+    margin: 25px 0 0;
+}
+
+#feature {
+    color: white;
 }
 
 .plan__action--wrapper {
-
+    padding: 40px;
 }
 
-.plan__action--button {
-
+#personal__action {
+    color: rgb(226, 232, 240);
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+    opacity: 1;
+    width: 70%;
+    padding: 30px 50px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
 }
 
+#business__action {
+    color: #6415ff;
+    background:rgb(247 250 252); 
+    opacity: 1;
+    width: 70%;
+    padding: 30px 50px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+}
 
-
-
-
-
+#enterprise__action {
+    color: rgb(226, 232, 240);
+    background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+    opacity: 1;
+    width: 70%;
+    padding: 30px 50px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+}
 
 /*
 
@@ -636,16 +686,148 @@ TESTIMONIALS
 
 */
 
+.testimonials__wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.ratings__container {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    padding: 0 0 0 80px;
+}
+
+
+.testimonials__img {
+    width: 40%;
+}
+
+.ratings__star {
+    display: flex;
+    opacity: 1;
+    color: rgb(246 173 85);
+    letter-spacing: 5px;
+}
+
+.testimonial_heading {
+    color: #243e63;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 20px 0 0;
+}
+
+blockquote {
+    color: #4a5568;
+    font-size: 25px;
+    font-weight: bold;
+    margin: 20px 0 50px;
+}
+
+.customer__img {
+    width: 100px;
+    height: 100px;
+    border-radius: 9999px;
+}
+
+.slider__wrapper {
+    display: flex;
+    flex-direction: column;
+    outline: transparent solid 2px;
+    outline-offset: 2px;
+}
+
+.customer__info--wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.customer__info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.customer__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 40px;
+}
+#customer__name {
+    color: #243e63;
+    font-size: 28px;
+    font-weight: bold;
+    margin: 0;
+    line-height: 1.5;
+}
+
+#customer__title {
+    color: #7C8BA1;
+    font-size: 22px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.customer-info__controls--container {
+    margin-top: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.slider__control {
+    display: flex;
+
+}
+
+.slider__arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #6415ff;
+    background-color: #edf2f7;
+    margin: 0 15px;
+    padding: 20px;
+    border-radius: 9999px;
+    opacity: 1;
+
+}
+
+.vertical__line {
+    widht: 5px;
+    height: 10px;
+    background-color: silver;
+}
+
 /* 
 
 FAQS 
 
 */
 
+.faqs__content--wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.faqs__header--description {
+    text-align: center;
+}
+
+.faqs__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 #accordion {
     margin: 100px auto;
-    width: 600px;
+    display: flex;
+    flex-direction: column;
 }
+
 #accordion li {
     list-style: none;
     width: 100%;
@@ -683,8 +865,14 @@ FAQS
     transform: rotate(45deg);
 }
 
-.arrow {
+.accordion__arrow {
     transform: rotate(90deg)
+} 
+
+
+.accordion__arrow:active {
+    transform: rotate(-90deg) translateZ(0px);
+    transition-duration: 300ms ease;
 } 
 
 /*
